Make animation bigger

--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
       }
       .scene-wrap {
         position: relative;
-        width: 460px;
-        height: 380px;
+        width: 540px;
+        height: 450px;
         transition: transform 0.3s ease;
       }
       .scene-svg {
@@ -843,8 +843,8 @@
           order: -1;
         }
         .scene-wrap {
-          width: 320px;
-          height: 270px;
+          width: 380px;
+          height: 320px;
         }
         .nav-links {
           display: none;
@@ -965,7 +965,20 @@
                 <span>LeetCode</span>
               </a>
               <a
-                href="mailto:huang.kaichin@gmail.com"
+                href="https://kai-chin.medium.com/"
+                target="_blank"
+                class="social-link"
+                aria-label="Blog"
+              >
+                <svg viewBox="0 0 24 24" fill="currentColor">
+                  <path
+                    d="M13.54 12a6.8 6.8 0 01-6.77 6.82A6.8 6.8 0 010 12a6.8 6.8 0 016.77-6.82A6.8 6.8 0 0113.54 12zm7.42 0c0 3.54-1.51 6.42-3.38 6.42-1.87 0-3.39-2.88-3.39-6.42s1.52-6.42 3.39-6.42 3.38 2.88 3.38 6.42M24 12c0 3.17-.53 5.75-1.19 5.75-.66 0-1.19-2.58-1.19-5.75s.53-5.75 1.19-5.75C23.47 6.25 24 8.83 24 12z"
+                  />
+                </svg>
+                <span>Blog</span>
+              </a>
+              <a
+                href="/cdn-cgi/l/email-protection#80e8f5e1eee7aeebe1e9e3e8e9eec0e7ede1e9ecaee3efed"
                 class="social-link"
                 aria-label="Email"
               >
@@ -1876,8 +1889,7 @@
     <footer>
       <div class="container">
         <p class="footer-text">
-          &copy; 2026 Kai-Chin Huang &#8212; Crafted with &#x1F49A; and lots of
-          &#x2615;
+          &copy; 2026 Kai-Chin Huang &#8212; Vibe coded with &#x1F49A and &#x2615;
         </p>
       </div>
     </footer>
