Update nav logo name

--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
 
     <nav>
       <div class="nav-inner">
-        <a href="#" class="logo">KC<span>H</span></a>
+        <a href="#" class="logo">Kai-Chin <span>Huang</span></a>
         <ul class="nav-links">
           <li><a href="#experience">Experience</a></li>
           <li><a href="#education">Education</a></li>
