Add YouTube social link

--- a/index.html
+++ b/index.html
@@ -984,6 +984,19 @@
                 <span>Blog</span>
               </a>
               <a
+                href="https://www.youtube.com/@kaichinhuang3828/videos"
+                target="_blank"
+                class="social-link"
+                aria-label="YouTube"
+              >
+                <svg viewBox="0 0 24 24" fill="currentColor">
+                  <path
+                    d="M23.5 6.2a3.02 3.02 0 0 0-2.12-2.14C19.5 3.6 12 3.6 12 3.6s-7.5 0-9.38.46A3.02 3.02 0 0 0 .5 6.2 31.4 31.4 0 0 0 0 12a31.4 31.4 0 0 0 .5 5.8 3.02 3.02 0 0 0 2.12 2.14C4.5 20.4 12 20.4 12 20.4s7.5 0 9.38-.46a3.02 3.02 0 0 0 2.12-2.14A31.4 31.4 0 0 0 24 12a31.4 31.4 0 0 0-.5-5.8ZM9.75 15.5V8.5l6 3.5-6 3.5Z"
+                  />
+                </svg>
+                <span>YouTube</span>
+              </a>
+              <a
                 href="/cdn-cgi/l/email-protection#80e8f5e1eee7aeebe1e9e3e8e9eec0e7ede1e9ecaee3efed"
                 class="social-link"
                 aria-label="Email"
@@ -1005,7 +1018,7 @@
             <div class="pills">
               <span class="pill">&#x1F6B4; Cycling</span>
               <span class="pill">&#x1F4AA; Working Out</span>
-              <span class="pill">&#x1F4BB; Open Source</span>
+              <span class="pill">&#x1F4BB; Vibe Coding</span>
             </div>
           </div>
           <div class="hero-visual">
