Update project title

--- a/index.html
+++ b/index.html
@@ -1833,7 +1833,7 @@
               target="_blank"
               class="p-link"
             >
-              <h3 class="p-title">Search and Rescue Website Demo</h3>
+              <h3 class="p-title">Search and Rescue Website</h3>
               <span class="p-link-icon"
                 ><svg
                   viewBox="0 0 16 16"
