Update project description

--- a/index.html
+++ b/index.html
@@ -1819,6 +1819,13 @@
               Built a voice recognition system for bakery workflows using
               Python and Google Voice Kit on Raspberry Pi, enabling hands-free
               dictation for common baking queries to support local businesses.
+              Featured in
+              <a
+                href="https://medium.com/a-chatbots-life/voice-recognition-bakery-solution-1cdb06cf636e"
+                target="_blank"
+                style="color: var(--accent); text-decoration: none"
+                >Chatbots Life</a
+              >.
             </p>
             <div class="p-tags">
               <span class="p-tag">Python</span
