Update gpx project description

--- a/index.html
+++ b/index.html
@@ -1717,9 +1717,7 @@
             <p class="p-subtitle">Web App</p>
             <p class="p-desc">
               Converts Google Maps direction URLs into GPX files compatible with
-              cycling computers (Garmin, Bryton, Wahoo). Uses OSRM
-              bicycle-optimized routing and Open-Meteo elevation data. No
-              account required.
+              cycling computers (Garmin, Bryton, Wahoo). Built with Next.js and deployed on Vercel.
             </p>
             <div class="p-tags">
               <span class="p-tag">Next.js</span
