update project url

--- a/index.html
+++ b/index.html
@@ -1696,7 +1696,7 @@
           <div class="p-card reveal">
             <div class="p-icon">&#x1F5FA;&#xFE0F;</div>
             <a
-              href="https://maps-to-gpx-five.vercel.app/"
+              href="https://maptogpx.com/"
               target="_blank"
               class="p-link"
             >
